<resources>
    <string name="app_name">MovieJetpack</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="title">Title</string>
    <string name="date">Aug, 21 2020</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid animi assumenda aut autem commodi consectetur deserunt dolores doloribus enim eos, et excepturi facere hic id itaque maiores molestias nihil nulla porro possimus praesentium quae quisquam quo recusandae repellendus sequi tempora tenetur ullam voluptates voluptatum! Culpa doloremque fuga porro sapiente voluptates.</string>
    <string name="poster">poster</string>
    <string name="overview">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorite">Favorite</string>
    <string name="details">Details</string>
    <string name="add_button">Add Button</string>
</resources>